# xs-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile-nocache  README.md  diesel.toml  flake.nix  fly.toml  rustfmt.toml
.forgejo/workflows/: deploy.yml
.github/workflows/: deploy.yml  tests.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2024-10-12-093555_create_tables/: down.sql  up.sql
migrations/2025-01-13-192638_remove_cart/: down.sql  up.sql
migrations/2025-02-17-173826_add_search/: down.sql  up.sql
migrations/2025-02-23-095436_remove_list_menu_item/: down.sql  up.sql
migrations/2025-03-03-043847_decopule_array_orders/: down.sql  up.sql
migrations/2025-03-11-125753_preorder_deliver_times/: down.sql  up.sql
migrations/2025-03-19-173915_canteen_pic/: down.sql  up.sql
migrations/2025-06-22-070930_canteen_auth/: down.sql  up.sql
migrations/2025-06-27-061030_pic_map_to_item/: down.sql  up.sql
migrations/2025-08-28-103017_pic_hash/: down.sql  up.sql
migrations/2025-09-02-170149_pic_link_rename/: down.sql  up.sql
migrations/2025-10-21-001000_firebase_auth/: down.sql  up.sql
migrations/2026-02-12-064859-0000_order_deliver_qr/: down.sql  up.sql
migrations/2026-02-17-051528-0000_add_price_to_order_items/: down.sql  up.sql
migrations/2026-02-22-120841-0000_canteen_hours/: down.sql  up.sql
migrations/2026-03-13-200000_pic_uuid_keys/: down.sql  up.sql
migrations/2026-03-20-065437-0000_add_phonepe_payment_orders/: down.sql  up.sql
src/: lib.rs  main.rs  test_utils.rs
src/api/: cors.rs  errors.rs  mod.rs
src/api/admin/: asset_management.rs  asset_upload.rs  canteen.rs  events.rs  menu.rs  mod.rs
src/api/common/: hold.rs  mod.rs  orders.rs  payments.rs  qr.rs  search.rs
src/api/users/: account.rs  events.rs  login.rs  mod.rs  orders.rs
src/auth/: admin_jwt.rs  config.rs  extractors.rs  firebase.rs  jwks.rs  middleware.rs  mod.rs  principal.rs  qr_token.rs
src/db/: errors.rs  mod.rs  schema.rs
src/db/admin/: asset_management.rs  asset_upload.rs  canteen.rs  menu.rs  mod.rs
src/db/common/: hold.rs  mod.rs  orders.rs  payments.rs  search.rs
src/db/handlers/: user.rs
src/db/users/: user.rs
src/enums/: admin.rs  common.rs  mod.rs  users.rs
src/handlers/: login.rs
src/models/: admin.rs  common.rs  mod.rs  user.rs  vendor.rs
src/services/: canteen_hours.rs  canteen_scheduler.rs  hold_cleanup.rs  mod.rs  phonepe.rs
src/sse/: broker.rs  mod.rs
src/traits/: mod.rs
tests/: api_admin_canteen.rs  api_admin_menu.rs  api_assets.rs  api_auth.rs  api_content_type_header.rs  api_holds.rs  api_orders.rs  api_payments.rs  api_public.rs  api_qr.rs  api_search.rs  api_sse_endpoints.rs  api_sse_flows.rs  api_users.rs  auth_admin_jwt.rs  auth_firebase.rs  auth_qr_token.rs  db_assets.rs  db_canteen.rs  db_holds.rs  db_menu.rs  db_orders.rs  db_sanity.rs  db_search.rs  db_users.rs  jwks_cache.rs  time_band_enum.rs  unit_traits.rs
tests/common/: mod.rs
with_pic_macro/: Cargo.toml
with_pic_macro/src/: lib.rs
