[package]
name = "proj-xs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proj-xs"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
utoipa-actix-web = "0.1.2"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
serde = {version = "1.0.218", features = ["derive"]}
diesel = {version = "2.2.7", features = ["postgres", "r2d2", "chrono"]}
pq-sys = { version = "0.7.0", features = ["bundled"] }
openssl-sys = { version = "0.9.106", features = ["vendored"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
chrono = {version = "0.4.39", features = ["serde"]}
dotenvy = "0.15.7"
log = "0.4.26"
pretty_env_logger = "0.5.0"
thiserror = "2.0.11"

[workspace.lints.clippy]
# --- Correctness: Catch serious errors ---
correctness = { level = "deny", priority = -1 }  # Treat correctness lints as errors

# --- Style: Learn and enforce good Rust style ---
style = "warn"
# Turn these off later
redundant_closure = "warn" # Helps you learn when closures can be simplified
match_bool = "warn"       # Encourages using if/else for booleans (more common in other languages)
needless_return = "warn"    # Encourages omitting the `return` keyword when it's not needed

# --- Complexity: Keep your code simple ---
complexity = "warn"
too_many_arguments = "warn"   # Avoid functions with excessive parameters
redundant_clone = "warn"      # Learn to use references and borrowing instead of unnecessary cloning
dead_code = "warn"

# --- Performance: Start with the basics ---
perf = "warn"
# Examples of perf lints that are good to be aware of:
iter_next_loop = "warn"    # Avoid common mistakes with iterators
inefficient_to_string = "warn" # Learn about the performance implications of `to_string`
