[package]
name = "proj-xs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proj-xs"
path = "src/main.rs"

[dependencies]

# Web stuff
actix-web = "4.13"
actix-web-lab = "0.26.0"
actix-cors = "0.7"

serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}

jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "sync", "time"] }

utoipa = { version = "5.4", features = ["actix_extras"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0", features = ["actix-web", "vendored"] }

# SQL
diesel = {version = "2.3", features = ["postgres", "r2d2", "chrono"]}
pq-sys = { version = "0.7", features = ["bundled"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
diesel_migrations = { version = "2.3", features = ["postgres"] }

# Image stuff
aws-sdk-s3 = "1.127"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
with_pic_macro = { path = "with_pic_macro" }

# QR stuff
base64 = "0.22.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

# Misc
dashmap = "6.1.0"
dotenvy = "0.15"
futures = "0.3.32"
log = "0.4"
pretty_env_logger = "0.5"
thiserror = "2.0"
uuid = { version = "1.22", features = ["v4", "v7"] }

[dev-dependencies]
testcontainers = { version = "0.27.0", features = ["blocking"] }
actix-rt = "2.11.0"
actix-http = "3.12.0"
wiremock = "0.6"

[workspace]
members = [".", "with_pic_macro"]

[lints]
workspace = true

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }  # Treat correctness lints as errors
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# --- Style: Learn and enforce good Rust style ---
redundant_closure = "warn" # Helps you learn when closures can be simplified
match_bool = "warn"       # Encourages using if/else for booleans (more common in other languages)
needless_return = "warn"    # Encourages omitting the `return` keyword when it's not needed
enum_variant_names = "allow"

# --- Complexity: Keep your code simple ---
too_many_arguments = "warn"   # Avoid functions with excessive parameters
redundant_clone = "warn"      # Learn to use references and borrowing instead of unnecessary cloning

# --- Performance: Start with the basics ---
iter_next_loop = "warn"    # Avoid common mistakes with iterators
inefficient_to_string = "warn" # Learn about the performance implications of `to_string`

[workspace.lints.rust]
# Rustc lints (not Clippy)
dead_code = "warn"
